--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             <h3>2022</h3>
                         </td>
                         <td rowspan="2" class="descripcion">
-                            Curso completo de Testing QA manual,con conocimientos de: Reporte de Bugs,Casos de pruebas, Reporte de pruebas, Api testing, Testing Agile.
+                            Curso completo de Testing QA manual,con conocimientos de: Reporte de Bugs,Casos de pruebas, Reporte de pruebas, Api testing, Testing Agile.<br>(Certificado)
                         </td>
                     </tr>
                     <tr>
@@ -145,7 +145,7 @@
                             <h3>2022</h3>
                         </td>
                         <td rowspan="2" class="descripcion">
-                            Curso de Introduccion a bases de datos y uso de MySQL
+                            Curso de Introduccion a bases de datos y uso de MySQL. <br>(Certificado)
                         </td>
                     </tr>
                     <tr>
@@ -162,7 +162,7 @@
                             <h3>2022</h3>
                         </td>
                         <td rowspan="2" class="descripcion">
-                            Curso de Introduccion al Api testing con Postman
+                            Curso de Introduccion al Api testing con Postman<br>(Certificado)
                         </td>
                     </tr>
                     <tr>
@@ -179,7 +179,7 @@
                             <h3>2022</h3>
                         </td>
                         <td rowspan="2" class="descripcion">
-                            Curso introductorio al Testing de Software orientado al mercado laboral 2022.
+                            Curso introductorio al Testing de Software orientado al mercado laboral 2022.<br>(Certificado)
                         </td>
                     </tr>
                     <tr>
@@ -196,7 +196,7 @@
                             <h3>2023</h3>
                         </td>
                         <td rowspan="2" class="descripcion">
-                            Curso de desarrollo Frontend con HTML, CSS y JavaScript. (EN CURSO)
+                            Curso de desarrollo Frontend con HTML, CSS y JavaScript. <br>(Certificado)
                         </td>
                     </tr>
                     <tr>
@@ -213,13 +213,30 @@
                             <h3>2023</h3>
                         </td>
                         <td rowspan="2" class="descripcion">
-                            Capacitación Data Process. Dictado por la empresa Quales - 2023 (RECIÉN INICIADO)
+                            Capacitación Data Process. Dictado por la empresa Quales - 2023 <br>(Cursando Actualmente)
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <h4>Programa Intensivo de Data Process(SQL)</h4>
                             <p>Quales</p>
+                            <span class="lugar">Online</span>
+                        </td>
+                    </tr>
+                </table>
+                <table>
+                    <tr>
+                        <td class="datos">
+                            <h3>2023</h3>
+                        </td>
+                        <td rowspan="2" class="descripcion">
+                            Capacitación de QC-Quality Control + Automation. Dictado por la empresa Globant - 2023 <br>(Cursando Actualmente)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <h4>Quality Control + Automation / Globant</h4>
+                            <p>Globant</p>
                             <span class="lugar">Online</span>
                         </td>
                     </tr>
@@ -346,6 +363,10 @@
                 <div class="card"> 
                     <h2 >Introduccion al Testing de software</h2>
                     <img class="imagen" src="media/Certificados/Testing.jpg" alt="">
+                </div>
+                <div class="card"> 
+                    <h2 >Primeros pasos del Desarrollo Frontend</h2>
+                    <img class="imagen" src="media/Certificados/CertificadoTicmas.jpg" alt="">
                 </div>
             </div>
         </div>
